--- a/templates/component/site/models/forms/filter_list.xml
+++ b/templates/component/site/models/forms/filter_list.xml
@@ -13,14 +13,14 @@
 	<fields name="list">
 		<field name="fullordering" type="list" label="COM_{{ constantCase componentName }}_LIST_FULL_ORDERING" description="COM_{{ constantCase componentName }}_LIST_FULL_ORDERING_DESC" onchange="this.form.submit();" default="a.id DESC">
 			<option value="">JGLOBAL_SORT_BY</option>
-			<option value="a.`id` ASC">ID Ascending</option>
-			<option value="a.`id` DESC">ID Descending</option>
-			<option value="a.`ordering` ASC">Order Ascending</option>
-			<option value="a.`ordering` DESC">Order Descending</option>
-			<option value="a.`state` ASC">State Ascending</option>
-			<option value="a.`state` DESC">State Descending</option>
-			<option value="a.`name` ASC">Name Ascending</option>
-			<option value="a.`name` DESC">Name Descending</option>
+			<option value="a.id ASC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_ASC</option>
+			<option value="a.id DESC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_DESC</option>
+			<option value="a.name ASC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_ASC</option>
+			<option value="a.name DESC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_DESC</option>
+			<option value="a.ordering ASC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_ASC</option>
+			<option value="a.ordering DESC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_DESC</option>
+			<option value="a.state ASC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_ASC</option>
+			<option value="a.state DESC">COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_DESC</option>
 		</field>
 
 		<field name="limit" type="limitbox" class="input-mini" default="25" onchange="this.form.submit();" />
